# argdown-cotgen

./: .gitignore  README.md  pyproject.toml  test_base_method.py
docs/: STRATEGY_TESTING_FRAMEWORK.md
recipies/: README_CONFIGURABLE.md  dataset_processing_script.py  deep-argmap-thinking_config.py  deepa2-thinking_config.py  processing_config.py
src/argdown_cotgen/: __init__.py
src/argdown_cotgen/core/: __init__.py  generator.py  models.py  parser.py
src/argdown_cotgen/formatters/: __init__.py  output.py
src/argdown_cotgen/strategies/: __init__.py  base.py
src/argdown_cotgen/strategies/argument_maps/: __init__.py  breadth_first.py  by_objection.py  by_rank.py  depth_diffusion.py  depth_first.py  random_diffusion.py
src/argdown_cotgen/strategies/arguments/: __init__.py  by_feature.py  by_rank.py
tests/: __init__.py  test_by_rank_strategy.py  test_comments.py  test_cot_formatter.py  test_data.py  test_generator_integration.py  test_indent_constant.py  test_parser.py  test_placeholder_comments.py  test_random_explanations.py  test_readme_examples.py  test_yaml_extraction.py
tests/strategies/: README.md  __init__.py  argument_strategy_test_framework.py  map_strategy_test_framework.py  strategy_test_framework.py  test_breadth_first_strategy.py  test_by_feature_argument_strategy.py  test_by_objection_strategy.py  test_by_rank_argument_strategy.py  test_by_rank_strategy.py  test_depth_diffusion_strategy.py  test_depth_first_strategy.py  test_random_diffusion_strategy.py  test_strategy_comparisons.py
