[project]
name = "argdown-cotgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
recipies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
]
